# music_service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  endpoints.py  main.py  models.py  pyproject.toml  repository.py  requer.txt  requirements.txt  schemas.py  tokens.py
files/: Readme.md  db_models.py  endpoints.py  repository.py  shemas.py
users/: db_models.py  endpoints.py  repository.py  shemas.py
users/tokens_utils/: endpoints.py  shemas.py  tokens.py
