[project]
name = "music-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Skro11X",email = "via_atm@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "passlib (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
